<resources>
    <string name="app_name">Gouiran Link</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_up">Inscrivez-vous</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Cette adresse e-mail est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">L\'accès aux contacts est nécessaire pour l\'envoi d\'e-mails.</string>
    <string name="welcome_user">"Bonjour %1$s,"</string>
    <string name="my_recent_researches">"Mes recherches récentes"</string>
    <string name="research_1">"%1$s"</string>
    <string name="research_2">"%1$s"</string>
    <string name="research_3">"%1$s"</string>
    <string name="research_4">"%1$s"</string>
    <string name="research_5">"%1$s"</string>
    <string name="research_6">"%1$s"</string>
    <string name="research_7">"%1$s"</string>
    <string name="research_8">"%1$s"</string>
    <string name="research_9">"%1$s"</string>
    <string name="around_me">"Autour de moi"</string>
    <string name="around_1_text">"Ninja H2R"</string>
    <string name="around_2_text">"GSXR 1000"</string>
    <string name="around_3_text">"ZZR 1400"</string>
    <string name="around_4_text">"ER6N"</string>
    <string name="around_5_text">"Kawasaki"</string>
    <string name="gouiran_link_selection">"La sélection de Gouiran Link"</string>
    <string name="selection_1">"%1$s"</string>
    <string name="selection_2">"%1$s"</string>
    <string name="selection_3">"%1$s"</string>
    <string name="selection_4">"%1$s"</string>
    <string name="selection_5">"%1$s"</string>
    <string name="selection_6">"%1$s"</string>
    <string name="selection_7">"%1$s"</string>
    <string name="selection_8">"%1$s"</string>
    <string name="selection_9">"%1$s"</string>
    <string name="invite_your_friends">"Invitez des amis"</string>
    <string name="invite_your_friends_button">"Invitez vos amis"</string>
    <string name="text_textpopup">"Text popup"</string>
    <string name="text_imagepopup">"Image popup"</string>
    <string name="appointmentText">"Rendez-vous"</string>
    <string name="acromMedium">"fonts/Acrom W00 Medium.ttf</string>
    <string name="gouiranlinktitle">"Gouiran Link"</string>
    <string name="research">"Recherche"</string>
    <string name="myReservations">"Mes réservations"</string>
    <string name="myFavourites">"Mes favoris"</string>
    <string name="myGallery">"Ma galerie"</string>
    <string name="myAccount">"Mon compte"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_parent">Gouiran Link</string>
    <string name="action_settings">Settings</string>
    <string name="erreur">Erreur rencontrée sur l\'application</string>
    <string name="service_type">Type de service</string>
    <string name="description">Description</string>
    <string name="screenshot">Capture d\'écran</string>
    <string name="informations">Informations sur l\'appareil</string>
    <string name="modele">Modèle de l\'appareil</string>
    <string name="version">Version Android/iOS</string>
    <string name="facebook_app_id">1195041087255686</string>
    <string name="hello">Hello World, CamTestActivity!</string>
    <string name="btn_capture">Click</string>
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
    <string name="loading">Loading</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="mot_de_passe_oublie"><u>Mot de passe oublié</u></string>
    <string name="ignorer_pour_l_instant"><u>Ignorer pour l\'instant</u></string>
    <string name="google_maps_key">AIzaSyApK9gGhCrCWBjS5Jfn0IG0ReirkfGduhA</string>
    <string name="take_picture">Take picture</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="top_recherche">Top Recherche</string>
    <string name="dynamic_recent_1">Curabitur suscipit quam</string>
    <string name="dynamic_recent_2">Phasellus felis orci</string>
    <string name="dynamic_recent_3">Duis non ullamcorper</string>
    <string name="dynamic_recent_4">Quisque nisl ligula</string>
    <string name="dynamic_recent_5">Etiam nec quam</string>
    <string name="dynamic_recent_6">Nam a sapien</string>
    <string name="dynamic_recent_7">Integer at nisi</string>
    <string name="dynamic_recent_8">Aenean tristique nisi</string>
    <string name="dynamic_recent_9">Proin lobortis sollicitudin</string>
    <string name="dynamic_around_1">Vivamus id pretium</string>
    <string name="dynamic_around_2">Lorem ipsum dolor</string>
    <string name="dynamic_around_3">Cras placerat pulvinar</string>
    <string name="dynamic_around_4">Curabitur a massa</string>
    <string name="dynamic_around_5">Proin viverra bibendum</string>
    <string name="dynamic_selection_1">Suspendisse imperdiet elit</string>
    <string name="dynamic_selection_2">Curabitur non convallis</string>
    <string name="dynamic_selection_3">Etiam sollicitudin quis</string>
    <string name="dynamic_selection_4">Sed posuere nisl</string>
    <string name="dynamic_selection_5">Nam nec erat</string>
    <string name="dynamic_selection_6">Vivamus vitae porttitor</string>
    <string name="dynamic_selection_7">Quisque imperdiet, arcu</string>
    <string name="dynamic_selection_8">Integer posuere ligula</string>
    <string name="dynamic_selection_9">Vestibulum lorem elit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="name">Nom</string>
    <string name="password">Mot de passe</string>
    <string name="email_address">Email</string>
    <string name="surname">Prénom</string>
    <string name="password_confirmation">Mot de passe (confirmation)</string>
    <string name="inscription">Valider</string>
    <string name="invalid_email">Cette adresse e-mail est invalide.</string>
    <string name="non_equal_password">Les mots de passe ne correspondent pas.</string>
    <string name="necessary_field">Ce champ est obligatoire</string>
    <string name="confirmation_mail_sentence">Vous avez reçu un e-mail de confirmation. Veuillez cliquer sur le lien qu\'il contient afin d\'activer votre compte Gouiran Link.</string>
    <string name="phone_number">Téléphone</string>
    <string name="gouiran_link">Gouiran Link</string>
    <string-array name="menu">
        <item>Accueil</item>
        <item>Recherche</item>
        <item>Mes Réservations</item>
        <item>Mes Favoris</item>
        <item>Ma Galerie</item>
        <item>Mon Compte</item>
    </string-array>
</resources>