<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/tab_home"
        icon="@drawable/ic_home_black_24dp"
        title="@string/home"
        barColorWhenSelected="@color/GouiranLightBlue" />
    <tab
        id="@+id/tab_research"
        icon="@drawable/ic_search_black_24dp"
        title="@string/research"
        barColorWhenSelected="@color/GouiranLightBlue" />
    <tab
        id="@+id/tab_reservations"
        icon="@drawable/ic_grid_on_black_24dp"
        title="@string/myReservations"
        barColorWhenSelected="@color/GouiranLightBlue" />
    <tab
        id="@+id/tab_favourites"
        icon="@drawable/ic_favorite_black_24dp"
        title="@string/myFavourites"
        barColorWhenSelected="@color/GouiranLightBlue" />
    <tab
        id="@+id/tab_gallery"
        icon="@drawable/ic_camera_alt_black_24dp"
        title="@string/myGallery"
        barColorWhenSelected="@color/GouiranLightBlue" />
    <tab
        id="@+id/tab_account"
        icon="@drawable/ic_person_black_24dp"
        title="@string/myAccount"
        barColorWhenSelected="@color/GouiranLightBlue" />
</tabs>