<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/research"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/research"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/my_reservations"
        android:enabled="true"
        android:icon="@drawable/ic_grid_on_black_24dp"
        android:title="@string/myReservations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/my_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/myFavourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/my_gallery"
        android:enabled="true"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/myGallery"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/my_account"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/myAccount"
        app:showAsAction="ifRoom" />-->

</menu>