<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_application_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.franois.gouiranlinkproject.ApplicationError">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/erreur"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:text="@string/erreur"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/erreur"
        android:textColor="@color/black"
        android:id="@+id/service_type"
        android:textSize="25dp"
        android:text="@string/service_type"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeEdit"
        android:layout_below="@id/erreur"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:id="@+id/separator1"
        android:layout_below="@id/typeEdit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_below="@id/separator1"
        android:textSize="25dp"
        android:id="@+id/description"
        android:text="@string/description"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEdit"
        android:layout_below="@id/description"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:id="@+id/screenshot"
        android:text="@string/screenshot"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:id="@+id/informations"
        android:text="@string/informations"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:id="@+id/modele"
        android:text="@string/modele"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:id="@+id/version"
        android:text="@string/version"/>

</RelativeLayout>
