<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.franois.gouiranlinkproject.LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:layout_width="302dp"
        android:layout_height="286dp"
        android:src="@drawable/splash_image"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:id="@+id/progressImageView"
        android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="302dp"
                android:layout_height="286dp"
                android:src="@drawable/splash_image"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:id="@+id/imageView" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:windowSoftInputMode="stateHidden"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mot_de_passe_oublie"
                    android:text="@string/mot_de_passe_oublie"
                    android:textColor="@color/com_facebook_messenger_blue"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ignorer_pour_l_instant"
                    android:text="@string/ignorer_pour_l_instant"
                    android:gravity="center"
                    android:textColor="@color/com_facebook_messenger_blue"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                android:background="@color/GouiranDarkPink"
                android:textColor="@color/white"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <Button
                android:id="@+id/email_sign_up_button"
                android:background="@color/GouiranDarkPink"
                android:textColor="@color/white"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <com.facebook.login.widget.LoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/facebook_login_button"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal" />
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    tools:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
